--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	... Silence is gold.
+	... Silence is gold. <br>
+	... Work in Progress ...
 </body>
 </html>
